--- a/6-Data_Prep_and_Vis/ex6.ipynb
+++ b/6-Data_Prep_and_Vis/ex6.ipynb
@@ -530,7 +530,7 @@
     "plot3.plot(temp_data, color='b', label='Current')\n",
     "plot3.plot(curr_rms, color='r', label='Period RMS of Current')\n",
     "plot3.set_title('Power over Time of AC Electrolux')\n",
-    "plot3.set_xlabel('Time [ss]')\n",
+    "plot3.set_xlabel('Time [s]')\n",
     "plot3.set_ylabel('Power [W]')\n",
     "plot3.legend()\n",
     "\n",
