--- a/6-Data_Prep_and_Vis/ex6.ipynb
+++ b/6-Data_Prep_and_Vis/ex6.ipynb
@@ -48,30 +48,39 @@
     "**Note that:** \n",
     "* It only create h5py objects which is not actually reading the data. \n",
     "\n",
-    "* From this point on, using this Blond object one can not read any other time which is not in the interval of the times specified. "
+    "* From this point on, using this Blond object one can not read any other time which is not in the interval of the data itself. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "from blond import Blond,get_time_diff\n",
-    "blond = Blond(date(2016,10,5),start_ts=time(0,50,0),end_ts=time(1,30,10))\n"
+    "blond = Blond(date(2016,10,5))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'clear': [<HDF5 file \"clear-2016-10-05T00-46-53.467073T+0200-0001315.hdf5\" (mode r+)>,\n",
+       "{'clear': [<HDF5 file \"clear-2016-10-05T00-01-50.891503T+0200-0001306.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"clear-2016-10-05T00-06-51.177842T+0200-0001307.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"clear-2016-10-05T00-11-51.464126T+0200-0001308.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"clear-2016-10-05T00-16-51.750433T+0200-0001309.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"clear-2016-10-05T00-21-52.035992T+0200-0001310.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"clear-2016-10-05T00-26-52.322393T+0200-0001311.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"clear-2016-10-05T00-31-52.608751T+0200-0001312.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"clear-2016-10-05T00-36-52.894519T+0200-0001313.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"clear-2016-10-05T00-41-53.180820T+0200-0001314.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"clear-2016-10-05T00-46-53.467073T+0200-0001315.hdf5\" (mode r+)>,\n",
        "  <HDF5 file \"clear-2016-10-05T00-51-53.752681T+0200-0001316.hdf5\" (mode r+)>,\n",
        "  <HDF5 file \"clear-2016-10-05T00-56-54.039123T+0200-0001317.hdf5\" (mode r+)>,\n",
        "  <HDF5 file \"clear-2016-10-05T01-01-54.325533T+0200-0001318.hdf5\" (mode r+)>,\n",
@@ -79,20 +88,38 @@
        "  <HDF5 file \"clear-2016-10-05T01-11-54.897536T+0200-0001320.hdf5\" (mode r+)>,\n",
        "  <HDF5 file \"clear-2016-10-05T01-16-55.183843T+0200-0001321.hdf5\" (mode r+)>,\n",
        "  <HDF5 file \"clear-2016-10-05T01-21-55.470225T+0200-0001322.hdf5\" (mode r+)>,\n",
-       "  <HDF5 file \"clear-2016-10-05T01-26-55.755842T+0200-0001323.hdf5\" (mode r+)>],\n",
-       " 'medal-1': [<HDF5 file \"medal-1-2016-10-05T00-47-13.877516T+0200-0000439.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"clear-2016-10-05T01-26-55.755842T+0200-0001323.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"clear-2016-10-05T01-31-56.042227T+0200-0001324.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"clear-2016-10-05T01-36-56.328649T+0200-0001325.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"clear-2016-10-05T01-41-56.615220T+0200-0001326.hdf5\" (mode r+)>],\n",
+       " 'medal-1': [<HDF5 file \"medal-1-2016-10-05T00-02-13.835059T+0200-0000436.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"medal-1-2016-10-05T00-17-13.845111T+0200-0000437.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"medal-1-2016-10-05T00-32-13.861557T+0200-0000438.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"medal-1-2016-10-05T00-47-13.877516T+0200-0000439.hdf5\" (mode r+)>,\n",
        "  <HDF5 file \"medal-1-2016-10-05T01-02-13.887807T+0200-0000440.hdf5\" (mode r+)>,\n",
-       "  <HDF5 file \"medal-1-2016-10-05T01-17-13.903732T+0200-0000441.hdf5\" (mode r+)>],\n",
-       " 'medal-2': [<HDF5 file \"medal-2-2016-10-05T00-47-17.565178T+0200-0000439.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"medal-1-2016-10-05T01-17-13.903732T+0200-0000441.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"medal-1-2016-10-05T01-32-13.919486T+0200-0000442.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"medal-1-2016-10-05T01-47-13.930055T+0200-0000443.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"medal-1-2016-10-05T02-02-13.946221T+0200-0000444.hdf5\" (mode r+)>],\n",
+       " 'medal-2': [<HDF5 file \"medal-2-2016-10-05T00-32-17.549484T+0200-0000438.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"medal-2-2016-10-05T00-47-17.565178T+0200-0000439.hdf5\" (mode r+)>,\n",
        "  <HDF5 file \"medal-2-2016-10-05T01-02-17.575063T+0200-0000440.hdf5\" (mode r+)>,\n",
-       "  <HDF5 file \"medal-2-2016-10-05T01-17-17.590817T+0200-0000441.hdf5\" (mode r+)>],\n",
-       " 'medal-3': [<HDF5 file \"medal-3-2016-10-05T00-45-09.374766T+0200-0000439.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"medal-2-2016-10-05T01-17-17.590817T+0200-0000441.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"medal-2-2016-10-05T01-32-17.606600T+0200-0000442.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"medal-2-2016-10-05T01-47-17.616674T+0200-0000443.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"medal-2-2016-10-05T02-02-17.632493T+0200-0000444.hdf5\" (mode r+)>],\n",
+       " 'medal-3': [<HDF5 file \"medal-3-2016-10-05T00-00-09.333792T+0200-0000436.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"medal-3-2016-10-05T00-15-09.339216T+0200-0000437.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"medal-3-2016-10-05T00-30-09.357019T+0200-0000438.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"medal-3-2016-10-05T00-45-09.374766T+0200-0000439.hdf5\" (mode r+)>,\n",
        "  <HDF5 file \"medal-3-2016-10-05T01-00-09.386977T+0200-0000440.hdf5\" (mode r+)>,\n",
        "  <HDF5 file \"medal-3-2016-10-05T01-15-09.404508T+0200-0000441.hdf5\" (mode r+)>,\n",
-       "  <HDF5 file \"medal-3-2016-10-05T01-30-09.422178T+0200-0000442.hdf5\" (mode r+)>]}"
+       "  <HDF5 file \"medal-3-2016-10-05T01-30-09.422178T+0200-0000442.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"medal-3-2016-10-05T01-45-09.434168T+0200-0000443.hdf5\" (mode r+)>,\n",
+       "  <HDF5 file \"medal-3-2016-10-05T02-00-09.452005T+0200-0000444.hdf5\" (mode r+)>]}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,29 +135,27 @@
    "source": [
     "### Example Data Read\n",
     "\n",
-    "In order to read a data interval, one needs to specify **device**(\"clear\", \"medal-1\"...), **signal**(\"current1\", \"current2\"...), start and end times. The time parameters here should be included in the time parameters of the Blond object itself.  \n",
-    "\n",
-    "Note that, read_data returns data from the beginning of **start_ts** until the end of **end_ts** inclusively."
+    "In order to read a data interval, one needs to specify **device**(\"clear\", \"medal-1\"...), **signal**(\"current1\", \"current2\"...), start and end times. The time parameters here should be present in the specified device data.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ -9, -18, -11, ..., -17, -16, -16])"
+       "array([ -9, -18, -11, ..., -15, -12, -15])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "blond.read_data( device=\"medal-1\",signal=\"current1\",start_ts=time(0,50,0), end_ts=time(1,30,1))"
+    "blond.read_data( device=\"medal-1\",signal=\"current1\",start_ts=time(0,50,0), end_ts=time(2,17,13))"
    ]
   },
   {
