center and calibrate data is implemented. it is called ipynb and dash

--- a/6-Data_Prep_and_Vis/ex6.ipynb
+++ b/6-Data_Prep_and_Vis/ex6.ipynb
@@ -133,16 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = 'medal-2'\n",
-    "signal = 'current1'\n",
-    "\n",
-    "\"\"\"Raw signal with offset and calibration factor attributes\"\"\"\n",
-    "dict_signal = blond.dict_read_signal(device, signal)\n",
-    "print(dict_signal)\n",
-    "\n",
-    "\n",
-    "\"\"\"calibrated signal\"\"\"\n",
-    "blond.center_and_calibrate(dict_signal)"
+    "blond.center_and_calibrate_all()"
    ]
   },
   {
