calibration option is added. data structure information is extracted when Blond class is initialized. x-axis values are added to the dash application.

--- a/6-Data_Prep_and_Vis/ex6.ipynb
+++ b/6-Data_Prep_and_Vis/ex6.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -64,13 +64,82 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\"\"\"Checking if files have been retrieved\"\"\"\n",
+    "Checking the retrieved files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'clear': ['clear-2016-10-05T00-01-50.891503T+0200-0001306.hdf5',\n",
+       "  'clear-2016-10-05T00-06-51.177842T+0200-0001307.hdf5',\n",
+       "  'clear-2016-10-05T00-11-51.464126T+0200-0001308.hdf5',\n",
+       "  'clear-2016-10-05T00-16-51.750433T+0200-0001309.hdf5',\n",
+       "  'clear-2016-10-05T00-21-52.035992T+0200-0001310.hdf5',\n",
+       "  'clear-2016-10-05T00-26-52.322393T+0200-0001311.hdf5',\n",
+       "  'clear-2016-10-05T00-31-52.608751T+0200-0001312.hdf5',\n",
+       "  'clear-2016-10-05T00-36-52.894519T+0200-0001313.hdf5',\n",
+       "  'clear-2016-10-05T00-41-53.180820T+0200-0001314.hdf5',\n",
+       "  'clear-2016-10-05T00-46-53.467073T+0200-0001315.hdf5',\n",
+       "  'clear-2016-10-05T00-51-53.752681T+0200-0001316.hdf5',\n",
+       "  'clear-2016-10-05T00-56-54.039123T+0200-0001317.hdf5',\n",
+       "  'clear-2016-10-05T01-01-54.325533T+0200-0001318.hdf5',\n",
+       "  'clear-2016-10-05T01-06-54.611818T+0200-0001319.hdf5',\n",
+       "  'clear-2016-10-05T01-11-54.897536T+0200-0001320.hdf5',\n",
+       "  'clear-2016-10-05T01-16-55.183843T+0200-0001321.hdf5',\n",
+       "  'clear-2016-10-05T01-21-55.470225T+0200-0001322.hdf5',\n",
+       "  'clear-2016-10-05T01-26-55.755842T+0200-0001323.hdf5',\n",
+       "  'clear-2016-10-05T01-31-56.042227T+0200-0001324.hdf5',\n",
+       "  'clear-2016-10-05T01-36-56.328649T+0200-0001325.hdf5',\n",
+       "  'clear-2016-10-05T01-41-56.615220T+0200-0001326.hdf5'],\n",
+       " 'medal-1': ['medal-1-2016-10-05T00-02-13.835059T+0200-0000436.hdf5',\n",
+       "  'medal-1-2016-10-05T00-17-13.845111T+0200-0000437.hdf5',\n",
+       "  'medal-1-2016-10-05T00-32-13.861557T+0200-0000438.hdf5',\n",
+       "  'medal-1-2016-10-05T00-47-13.877516T+0200-0000439.hdf5',\n",
+       "  'medal-1-2016-10-05T01-02-13.887807T+0200-0000440.hdf5',\n",
+       "  'medal-1-2016-10-05T01-17-13.903732T+0200-0000441.hdf5',\n",
+       "  'medal-1-2016-10-05T01-32-13.919486T+0200-0000442.hdf5',\n",
+       "  'medal-1-2016-10-05T01-47-13.930055T+0200-0000443.hdf5',\n",
+       "  'medal-1-2016-10-05T02-02-13.946221T+0200-0000444.hdf5'],\n",
+       " 'medal-2': ['medal-2-2016-10-05T00-32-17.549484T+0200-0000438.hdf5',\n",
+       "  'medal-2-2016-10-05T00-47-17.565178T+0200-0000439.hdf5',\n",
+       "  'medal-2-2016-10-05T01-02-17.575063T+0200-0000440.hdf5',\n",
+       "  'medal-2-2016-10-05T01-17-17.590817T+0200-0000441.hdf5',\n",
+       "  'medal-2-2016-10-05T01-32-17.606600T+0200-0000442.hdf5',\n",
+       "  'medal-2-2016-10-05T01-47-17.616674T+0200-0000443.hdf5',\n",
+       "  'medal-2-2016-10-05T02-02-17.632493T+0200-0000444.hdf5'],\n",
+       " 'medal-3': ['medal-3-2016-10-05T00-00-09.333792T+0200-0000436.hdf5',\n",
+       "  'medal-3-2016-10-05T00-15-09.339216T+0200-0000437.hdf5',\n",
+       "  'medal-3-2016-10-05T00-30-09.357019T+0200-0000438.hdf5',\n",
+       "  'medal-3-2016-10-05T00-45-09.374766T+0200-0000439.hdf5',\n",
+       "  'medal-3-2016-10-05T01-00-09.386977T+0200-0000440.hdf5',\n",
+       "  'medal-3-2016-10-05T01-15-09.404508T+0200-0000441.hdf5',\n",
+       "  'medal-3-2016-10-05T01-30-09.422178T+0200-0000442.hdf5',\n",
+       "  'medal-3-2016-10-05T01-45-09.434168T+0200-0000443.hdf5',\n",
+       "  'medal-3-2016-10-05T02-00-09.452005T+0200-0000444.hdf5']}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "blond.list_files()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking the data structure"
    ]
   },
   {
@@ -84,11 +153,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6400,)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "blond.read_data( device=\"medal-1\",signal=\"current1\",start_ts=time(0,50,0), end_ts=time(2,17,13))"
+    "the_data = blond.read_data( device=\"medal-1\",signal=\"current1\",start_ts=time(0,50,0), end_ts=time(0,50,1),calibrate=True)\n",
+    "the_data.shape"
    ]
   },
   {
@@ -99,41 +180,74 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\"\"\"signals acquisited by MEDAL\"\"\"\n",
-    "medal_file = blond.list_files()['medal-1'][0]\n",
-    "[key for key in medal_file.keys()]"
+    "Signals acquisited by MEDAL"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['current1',\n",
+       " 'current2',\n",
+       " 'current3',\n",
+       " 'current4',\n",
+       " 'current5',\n",
+       " 'current6',\n",
+       " 'voltage']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\"\"\"signals acquisited by CLEAR\"\"\"\n",
-    "clear_file = blond.list_files()['clear'][0]\n",
-    "[key for key in clear_file.keys()]"
+    "blond.get_data_structure()[\"medal-1\"]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Centering and calibrating"
+    "Signals acquisited by CLEAR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['current1', 'current2', 'current3', 'voltage1', 'voltage2', 'voltage3']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "blond.center_and_calibrate_all()"
+    "blond.get_data_structure()[\"clear\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Centering and calibrating\n",
+    "\n",
+    "When *read_data* function of the Blond class is called, the data is calibrated automatically. So we do not need an extra function call here.\n",
+    "\n",
+    "**Note:** If you do not want the data centered and calibrate, you can call *read_data* with the **calibrate** = *False* parameter. Otherwise it will be always calibrated."
    ]
   },
   {
