--- a/6-Data_Prep_and_Vis/ex6.ipynb
+++ b/6-Data_Prep_and_Vis/ex6.ipynb
@@ -46,14 +46,16 @@
     "In blond.py file, you can find the Blond class which handles data input, output and calibration. When the Blond class is initiated, it tries to acquire the data, whose interval is specified as an input. \n",
     "\n",
     "**Note that:** \n",
-    "* It only create h5py objects which is not actually reading the data. \n",
+    "* Your data should be under **./data/** folder. For example **./data/clear** and **./data/medal-2**. \n",
     "\n",
-    "* From this point on, using this Blond object one can not read any other time which is not in the interval of the data itself. "
+    "* It only reads h5py file names and extracts the structure of the data, i.e. number of medals and signal names under each device, which is not actually reading the data. \n",
+    "\n",
+    "* From this point on, using this Blond object one can not read any other time which is not in the interval of the data itself. For example, your latest clear hdf5 file is 02:15:20, when you ask for clear data between 02:20:25-02:20:30 you wont get any data. But you are still able to get data for 02:18:10-02:20:20, since clear data contains 5 minutes of data in a file."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -146,14 +148,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example Data Read\n",
-    "\n",
-    "In order to read a data interval, one needs to specify **device**(\"clear\", \"medal-1\"...), **signal**(\"current1\", \"current2\"...), start and end times. The time parameters here should be present in the specified device data.  "
+    "See the possible time ranges for each device. Note that, all the times are inclusive. If you see a time of *medal-1* for *latest* *2:17:12* , you will get the data until the end of 12.th second."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'clear': {'earliest': datetime.time(0, 1, 50),\n",
+       "  'latest': datetime.time(1, 46, 55)},\n",
+       " 'medal-1': {'earliest': datetime.time(0, 2, 13),\n",
+       "  'latest': datetime.time(2, 17, 12)},\n",
+       " 'medal-2': {'earliest': datetime.time(0, 32, 17),\n",
+       "  'latest': datetime.time(2, 17, 16)},\n",
+       " 'medal-3': {'earliest': datetime.time(0, 0, 9),\n",
+       "  'latest': datetime.time(2, 15, 8)}}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "blond.time_limits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example Data Read\n",
+    "\n",
+    "In order to read a data interval, one needs to specify **device**(\"clear\", \"medal-1\"...), **signal**(\"current1\", \"current2\"...), start and end times. The time parameters here should be present in the specified device data. You can read either with or without calibration(actually \"calibration and centering\" is one parameter, so if you calibrate it is also centered). \n",
+    "\n",
+    "**Note:** While start time(start_ts) is inclusive, end time(end_ts) is exclusive. So for the example below, you will get the data of whole 0:50:0, so 0:50:1 is not included."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -162,13 +200,19 @@
        "(6400,)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "the_data = blond.read_data( device=\"medal-1\",signal=\"current1\",start_ts=time(0,50,0), end_ts=time(0,50,1),calibrate=True)\n",
+    "the_data = blond.read_data(\n",
+    "    device=\"medal-1\",\n",
+    "    signal=\"current1\",\n",
+    "    start_ts=time(0,50,0), \n",
+    "    end_ts=time(0,50,1),\n",
+    "    calibrate=False\n",
+    ")\n",
     "the_data.shape"
    ]
   },
@@ -247,7 +291,7 @@
     "\n",
     "When *read_data* function of the Blond class is called, the data is calibrated automatically. So we do not need an extra function call here.\n",
     "\n",
-    "**Note:** If you do not want the data centered and calibrate, you can call *read_data* with the **calibrate** = *False* parameter. Otherwise it will be always calibrated."
+    "**Note:** If you do not want the data centered and calibrated, you can call *read_data* with the **calibrate** = *False* parameter. Otherwise it will be always calibrated and centered."
    ]
   },
   {
