fixed plot function

--- a/6-Data_Prep_and_Vis/ex6.ipynb
+++ b/6-Data_Prep_and_Vis/ex6.ipynb
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "from blond import Blond,get_time_diff\n",
-    "blond = Blond(date(2016,10,5))\n"
+    "blond = Blond(date(2016,10,5))"
    ]
   },
   {
@@ -206,14 +206,24 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "sps = 6400\n",
-    "phase = 1\n",
-    "requested_time = time(1,10,10)\n",
-    "file_index = blond.find_corresponding_file(requested_time, blond.time_stamps['clear'])\n",
-    "time_diff = get_time_diff(requested_time , blond.time_stamps['clear'][file_index])\n",
-    "data_index_shift = time_diff * sps\n",
-    "temp_data1 = blond.list_files()['clear'][file_index][\"current\"+str(phase)][data_index_shift:data_index_shift + int(sps*0.1)]\n",
-    "temp_data2 = blond.list_files()['clear'][file_index][\"voltage\"+str(phase)][data_index_shift:data_index_shift + int(sps*0.1)]\n",
+    "\n",
+    "\n",
+    "requested_time_start = time(1,10,10)\n",
+    "requested_time_end = time(1,10,15)\n",
+    "\n",
+    "temp_data1 = blond.read_data(\n",
+    "    device=\"clear\",\n",
+    "    signal=\"current1\",\n",
+    "    start_ts=requested_time_start, \n",
+    "    end_ts=requested_time_end,\n",
+    ")\n",
+    "\n",
+    "temp_data2 = blond.read_data(\n",
+    "    device=\"clear\",\n",
+    "    signal=\"voltage1\",\n",
+    "    start_ts=requested_time_start, \n",
+    "    end_ts=requested_time_end,\n",
+    ")\n",
     "\n",
     "#calculate period Root-Mean-Square of the Current\n",
     "for curr in temp_data1:\n",
